finished styling the app including all of the components and the 3rd party module which is the modal. Also added extra scss for supporting mobile devices.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Indecision App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel ="icon" sizes="192x192" href="./favicon.jpg"/>
+    <link rel="apple-touch-icon" href="./favicon.jpg">
+    <link rel="shortcut icon" href="./favicon.jpg" type="image/x-icon">
+
 </head>
 
 <body>
@@ -13,4 +19,4 @@
     <script src="/bundle.js"></script>
 </body>
 
-</html>
+</html> 
